--- a/Track Your Reps/Info.plist
+++ b/Track Your Reps/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+ <string>Please allow general location so we can get your representatives. </string>
+ <key>NSLocationWhenInUseUsageDescription</key>
+ <string>Please allow general location so we can get your representatives.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
