fonts and components in feed table

--- a/Track Your Reps/Info.plist
+++ b/Track Your Reps/Info.plist
@@ -4,7 +4,8 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string></string>
+		<string>Montserrat-SemiBold.ttf</string>
+		<string>Montserrat-Light.ttf</string>
 		<string>Montserrat-Black.ttf</string>
 		<string>Montserrat-Bold.ttf</string>
 		<string>Montserrat-Italic.ttf</string>
